Fixed icon center alignment in ingredients

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,8 +54,7 @@ CSS for recipe steps
 h1 {
 	font-family: "messy", Verdana, Tahoma;
 	font-size: 5em;
-	max-height: 300px;	
-
+	max-height: 300px;
 	text-align: center;
 	color: #ffffff;
 	text-shadow: 3px 3px 5px #111;
@@ -155,8 +154,13 @@ body {
 	position: absolute;
 }
 
-.ingreIcon {
+.ingreIcon img {
+	margin: 0 auto;
 	max-width: 100px;
 	max-height: 100px;
+}
+
+#iconMass {
 	margin: auto;
+	text-align: center;
 }
